refactor: 로깅 방식 변경
성능 향상 및 확장성을 위해 로깅 방식 변경함
- 기존: System.out.println
- 변경: 로그백