@@ -1,5 +1,7 @@
 package org.example.cafe.servlet;
 
+import static org.example.cafe.utils.LoggerFactory.getLogger;
+
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
@@ -7,17 +9,22 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import org.example.cafe.domain.user.User;
 import org.example.cafe.domain.user.UserRepository;
+import org.slf4j.Logger;
 
 @WebServlet(name = "UserProfileServlet", value = "/users/*")
 public class UserProfileServlet extends HttpServlet {
+
+    private static final Logger log = getLogger(UserProfileServlet.class);
 
     private UserRepository userRepository;
 
     @Override
     public void init() {
         this.userRepository = (UserRepository) getServletContext().getAttribute("UserRepository");
+        log.debug("Init servlet: {}", this.getClass().getSimpleName());
     }
 
     /**
@@ -34,7 +41,7 @@ public class UserProfileServlet extends HttpServlet {
 
         String path = request.getRequestURI();
         String[] pathParts = path.split("/");
-        String userId = URLDecoder.decode(pathParts[2], "UTF-8");
+        String userId = URLDecoder.decode(pathParts[2], StandardCharsets.UTF_8);
 
         User user = userRepository.findById(userId);
 
